# extobj

./: Cargo.toml  README.md
benches/: bench.rs
extobj/: Cargo.toml
extobj-macro/: Cargo.toml
extobj-macro/src/: lib.rs
extobj/benches/: bench.rs
extobj/src/: dynobj.rs  lib.rs
extobj/tests/: tests.rs
src/: lib.rs  obj.rs  ty_store.rs
tests/: tests.rs
