[package]
name = "extobj-macro"
version = "0.3.0"
edition = "2024"
description = "Zero-cost, cross-crate extensible objects"
repository = "https://github.com/danylaporte/extobj"
license = "MIT OR Apache-2.0"
keywords = ["extensible", "macro", "data"]
categories = ["rust-patterns"]
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
