[package]
name = "extobj"
version = "0.4.0"
edition = "2024"
description = "Zero-cost, cross-crate extensible objects"
repository = "https://github.com/danylaporte/extobj"
license = "MIT OR Apache-2.0"
keywords = ["extensible", "macro", "data"]
categories = ["rust-patterns"]
publish = false

[dependencies]
ctor = "0.6.1"
extobj-macro = { path = "../extobj-macro" }
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "bench"
harness = false
